<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AfterLogin">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:id="@+id/welcome_text"
        android:padding="6dp"
        android:textSize="35dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_margin="25dp"
        android:textColor="@color/lavender"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textview_classname"
        android:layout_below="@+id/welcome_text"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:padding="6dp"
        android:textSize="25sp"
        android:textColor="@color/lavender"
        android:text="@string/classnames"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/spinner_class"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/spinner"
        android:layout_below="@id/textview_classname"
        android:layout_marginBottom="33dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textview_subjectname"
        android:layout_below="@+id/spinner_class"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:padding="6dp"
        android:textSize="25sp"
        android:textColor="@color/lavender"
        android:text="@string/subjectname"
        android:focusable="true"
        android:focusableInTouchMode="true"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/spinner_subject"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/spinner"
        android:layout_below="@id/textview_subjectname"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_upload"
        android:layout_below="@id/spinner_subject"
        android:layout_marginTop="50dp"
        android:text="@string/Upload"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:paddingRight="48dp"
        android:paddingLeft="48dp"
        app:cornerRadius = "30dp"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnadds"
        android:layout_below="@id/button_upload"
        android:text="@string/add_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:paddingRight="48dp"
        android:paddingLeft="48dp"
        app:cornerRadius = "30dp"/>


</RelativeLayout>
